Decode Base64 with another class